--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
                             <h3>Project 2: Image Encryption and Decryption</h3>
                             <p>Image encryption and decryption involve transforming an image into an unrecognizable format (encryption) and then reverting it to its original form (decryption). This project is essential for securing image data, ensuring that sensitive visual information is protected from unauthorized access.</p>
                             <a href="https://charan01227.github.io/Image_Encryption_Decryption_Tool/">Website Link</a>
-                            <img src="website.png" alt="Image encryption website Logo">
+                            <img src="Website.png" alt="Image encryption website Logo">
                         </li>
                     </ul>
                 </div>
